--- a/dev/templates/index.html
+++ b/dev/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
 </head>
+<link rel="stylesheet" href="lib/Font-Awesome-4.7.0/css/font-awesome.min.css">
 <body>
 <div class="main" id="main">
 
